--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
-    "react": "^17.0.2",
+    "mongoose": "^7.4.0",
     "react-dom": "^17.0.2"
   }
 }
